--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,12 @@
       <version>2.2.2</version>
       <type>bundle</type>
     </dependency-->
-
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20190722</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <properties>
